--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ colorama==0.4.6
 google-auth==2.35.0
 google-auth-oauthlib==1.2.1
 gspread==6.1.4
+keyboard==0.13.5
 oauthlib==3.2.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
