--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 cachetools==5.5.0
 colorama==0.4.6
-google-auth==2.35.0
+DateTime==5.5
+google-auth==2.36.0
 google-auth-oauthlib==1.2.1
 gspread==6.1.4
-keyboard==0.13.5
 oauthlib==3.2.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pyfiglet==1.0.2
+pytz==2024.2
 requests-oauthlib==2.0.0
 rsa==4.9
 tabulate==0.9.0
+zope.interface==7.1.1
